--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,5 +3,8 @@ name = "dbtproj"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.13"
-dependencies = []
+requires-python = ">=3.12"
+dependencies = [
+    "dbt-core>=1.11.6",
+    "dbt-databricks>=1.11.5",
+]
